--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "swiper": "^11.2.8",
+    "web-vitals": "^2.1.0",
+    "yet-another-react-lightbox": "^3.23.3"
   },
   "scripts": {
     "start": "react-scripts start",
